# TestTradingGuru

./: discord_bot.py  extrapolate.py  list.csv  main.py  paper_trade.py  pyproject.toml  tickers.txt  web_server.py
TradingGuru/: TD.py  main.py  paper_trade.py  squeeze.py
data/: AACG.csv  AACQ.csv  AACQU.csv  AACQW.csv  AAL.csv  AAME.csv  AAOI.csv  AAON.csv  AAPL.csv  AAWW.csv  ABCB.csv  ABCL.csv  ABCM.csv  ABEO.csv  ABGI.csv  ABIO.csv  ABMD.csv  ABNB.csv  ABST.csv  ABTX.csv  ABUS.csv  ACAC.csv  ACACU.csv  ACAD.csv  ACAHU.csv  ACBI.csv  ACCD.csv  ACER.csv  ACET.csv  ACEV.csv  ACEVU.csv  ACEVW.csv  ACGL.csv  ACGLO.csv  ACGLP.csv  ACHC.csv  ACHV.csv  ACIU.csv  ACIW.csv  ACKIT.csv  (+787 more)
