[tool.poetry]
name = "tradingguru"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
pandas = "^1.2.3"
alpha-vantage = "^2.3.1"
schedule = "^1.0.0"
yfinance = "^0.1.55"
flask = "^1.1.2"
webull = "^0.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
